--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,16 @@
 page-home {
+ #lol{
+    width:15%;  
+    height:70%;  
+    background-color: #e5a3ad;
+ }
 
+ h1{
+     
+    color: #e5a3ad;
+ }
+
+ h2{
+    color:#ffb6c1;
+ }
 }
