--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,8 +1,17 @@
 page-home {
  #lol{
-    width:15%;  
+    width:27%;  
     height:70%;  
     background-color: #e5a3ad;
+    display: inline-block;
+    font-size: 15px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 9px #ffb6c1;
  }
 
  h1{
